syntax = "proto3";

package expense;

option go_package = "expense-management-system/internal/api/grpc/proto";

service ExpenseService {
    rpc CreateExpense(CreateExpenseRequest) returns (CreateExpenseResponse);
    rpc GetExpense(GetExpenseRequest) returns (GetExpenseResponse);
    rpc UpdateExpense(UpdateExpenseRequest) returns (UpdateExpenseResponse);
    rpc DeleteExpense(DeleteExpenseRequest) returns (DeleteExpenseResponse);
}

message CreateExpenseRequest {
    string user_id = 1;
    string description = 2;
    double amount = 3;
    string date = 4;
}

message CreateExpenseResponse {
    string expense_id = 1;
}

message GetExpenseRequest {
    string expense_id = 1;
}

message GetExpenseResponse {
    string expense_id = 1;
    string user_id = 2;
    string description = 3;
    double amount = 4;
    string date = 5;
}

message UpdateExpenseRequest {
    string expense_id = 1;
    string description = 2;
    double amount = 3;
    string date = 4;
}

message UpdateExpenseResponse {
    bool success = 1;
}

message DeleteExpenseRequest {
    string expense_id = 1;
}

message DeleteExpenseResponse {
    bool success = 1;
}